--- a/ssd-storageclass.yaml
+++ b/ssd-storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: standard
+  name: faster
 provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-ssd
